--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-         QEMU README
+trying to run apple iPhone5S SEP kernel. now it does not work.  
+  QEMU README
          ===========
 
 QEMU is a generic and open source machine & userspace emulator and
